# chunkflow

./: .dockerignore  .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  README.md  conftest.py  count_operators.sh  debug.Dockerfile  dev-environments.txt  dev-requirements.txt  requirements.txt  setup.py
.github/: FUNDING.yml
chunkflow/: __init__.py  __main__.py  __version__.py  block_inference_engine.py  chunk.py  consume_tasks.py  create_chunk.py  create_thumbnail.py  crop_margin.py  cutout.py  execute.py  executor.py  flow.py  global_array.py  inference.py  inference_and_donate.py  mask.py  neuroglancer_view.py  offset_array.py  options.py  point_cloud.py  pyproject.toml  read_file.py  receive_and_blend.py  save.py  sqs_queue.py  synapses.py  upload_log.py  validate.py  view.py  volume.py  write_h5.py
chunkflow/aws/: cloud_watch.py  sqs_queue.py  test_cloud_watch.py  test_sqs_queue.py
chunkflow/backup/: chunk_manager.py  inference_and_donate.py  options.py  receive_and_blend.py
chunkflow/block_inference/: block_inference_engine.py  patch_mask.py  test_block_inference_engine.py
chunkflow/chunk/: __init__.py  base.py  probability_map.py  segmentation.py  utils.py  validate.py
chunkflow/distributed/: scheduler.py  server.py
chunkflow/flow/: __init__.py  agglomerate.py  aggregate_skeleton_fragments.py  base.py  cloud_watch.py  connected_components.py  create_bounding_boxes.py  create_chunk.py  crop_margin.py  custom_operator.py  cutout.py  cutout_dvid_label.py  downsample_upload.py  evaluate_segmentation.py  flow.py  inference.py  lib.py  load_pngs.py  load_precomputed.py  log_stats.py  log_summary.py  main.py  mask.py  mask_out_objects.py  mesh.py  mesh_manifest.py  napari.py  neuroglancer.py  normalize_section_contrast.py  normalize_section_shang.py  plugin.py  produce_tasks.py  read_h5.py  read_pngs.py  read_precomputed.py  read_tif.py  remap.py  save.py  save_pngs.py  save_precomputed.py  (+7 more)
chunkflow/frameworks/: identity_patch_inference_engine.py  pznet.py  (+3 more)
(+305 files in other folders)
