[project]
name = "chunkflow"
version = "1.1.4"
description = "Composable image chunk operators to create pipeline for distributed computation."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["distributed computing", "image processing", "cloud computing", "deep learning", "connectomics"]
authors = [
  {email = "jingpeng.wu@gmail.com"},
  {name = "Jingpeng Wu"}
]
maintainers = [
  {name = "Jingpeng Wu", email = "jingpeng.wu@gmail.com"}
]
classifiers = [
    "Development Status :: 2 - Beta",
    "Programming Language :: Python",
    'Environment :: Console',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.20.0",
    "boto3",
    "cloud-volume>=0.47.0",
    "click>=8.1",
    "tqdm>=4.36.1",
    "connected-components-3d",
    "scikit-image>=0.14.2",
    "scikit-learn",
    "h5py",
    "neuroglancer>=2.28",
    "tinybrain",
    "tifffile",
    "pandas>=1.3.5",
    "zmesh",
    "fastremap",
    "matplotlib",
    "kimimaro",
    "pyspng-seunglab~=1.0.0",
    "pyparsing>=2.4.2",
    "urllib3>=1.25.11",
    "docutils>=0.10",
    "pynrrd",
    "psutil",
    "gputil",
    "traitlets",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
homepage = "https://github.com/seung-lab/chunkflow"
documentation = "https://pychunkflow.readthedocs.io"
repository = "https://github.com/seung-lab/chunkflow"
changelog = "https://github.com/seung-lab/chunkflow/blob/master/CHANGELOG.md"

[project.scripts]
#chunkflow = "chunkflow.flow.flow:main"

[project.gui-scripts]

[project.entry-points."spam.magical"]
chunkflow = "chunkflow.flow.flow:main"
